fix: 🔨Removed spacing from buttons

--- a/theme/base.css
+++ b/theme/base.css
@@ -391,7 +391,6 @@ progress {
 .layout-desktop .mainDetailButtons {
     padding-top: 350px;
     padding-left: 300px;
-    left: 70px;
     position: absolute;
 }
 
